--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,12 @@
     <script src="/bower_components/jquery/dist/jquery.min.js"></script>
     <script src="/bower_components/angular/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
+    <!-- <link rel='stylesheet' href='http://bootswatch.com/paper/bootstrap.min.css'/> -->
+
   </head>
   <body>
     <h1>Hi</h1>
     <button class="btn btn-primary">Hello</button>
+    <p>Hey there sass</p>
   </body>
 </html>
