--- a/public/index.html
+++ b/public/index.html
@@ -8,135 +8,168 @@
     <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
     <script src="/bower_components/angular/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
-    <link rel='stylesheet' href='http://bootswatch.com/slate/bootstrap.min.css'/>
+    <link rel='stylesheet' href='http://bootswatch.com/cyborg/bootstrap.min.css'/>
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <script src="http://www.amcharts.com/lib/3/amcharts.js"></script>
     <script src="http://www.amcharts.com/lib/3/serial.js"></script>
     <script src="http://www.amcharts.com/lib/3/themes/chalk.js"></script>
+    <script src="http://www.amcharts.com/lib/3/themes/light.js"></script>
+
     <script src="http://www.amcharts.com/lib/3/amstock.js"></script>
     <script src="./javascripts/chart.js"></script>
-
   </head>
+
   <body>
-    
+
     <div class="nav-side-menu">
-        <div class="brand">grockr</div>
-        <i class="fa fa-bars fa-2x toggle-btn" data-toggle="collapse" data-target="#menu-content"></i>
-            <div class="menu-list">
-                <ul id="menu-content" class="menu-content collapse out">
-                    <li>
-                      <a href="#">
-                      <i class="fa fa-dashboard fa-lg"></i> Dashboard
-                      </a>
-                    </li>
+      <div class="brand">grockr</div>
+      <i class="fa fa-bars fa-2x toggle-btn" data-toggle="collapse" data-target="#menu-content"></i>
+      <div class="menu-list">
+        <ul id="menu-content" class="menu-content collapse out">
+          <li>
+            <a href="#">
+              <i class="fa fa-line-chart">  </i>Dashboard
+            </a>
+          </li>
 
-                    <li  data-toggle="collapse" data-target="#products" class="collapsed active">
-                      <a href="#"><i class="fa fa-gift fa-lg"></i> UI Elements <span class="arrow"></span></a>
-                    </li>
-                    <ul class="sub-menu collapse" id="products">
-                        <li data-toggle='collapse'  data-target='#sub' class="active"><a href="#">CSS3 Animation</a></li>
-                        <li><a href="#">General</a></li>
-                        <li><a href="#">Buttons</a></li>
-                        <li><a href="#">Tabs & Accordions</a></li>
-                        <li><a href="#">Typography</a></li>
-                        <li><a href="#">FontAwesome</a></li>
-                        <li><a href="#">Slider</a></li>
-                        <li><a href="#">Panels</a></li>
-                        <li><a href="#">Widgets</a></li>
-                        <li><a href="#">Bootstrap Model</a></li>
-                    </ul>
+          <li  data-toggle="collapse" data-target="#products" class="collapsed active">
+            <a href="#"><i class="fa fa-university"></i></i>Stocks<span class="arrow"></span></a>
+          </li>
+          <ul class="sub-menu collapse" id="products">
+              <li data-toggle='collapse'  data-target='#sub' class="active"><a href="#">Cherries</a></li>
+              <li><a href="#">Corn</a></li>
+              <li><a href="#">Wheat</a></li>
+              <li><a href="#">Dairy</a></li>
+              <li><a href="#">Coffee</a></li>
+              <li><a href="#">Sugar</a></li>
+              <li><a href="#">Soybeans</a></li>
+          </ul>
 
+          <li data-toggle="collapse" data-target="#service" class="collapsed">
+            <a href="#"><i class="fa fa-graduation-cap"></i>Lessons<span class="arrow"></span></a>
+          </li>
+          <ul class="sub-menu collapse" id="service">
+            <li>Level 1</li>
+            <li>Level 2</li>
+            <li>Level 3</li>
+            <li>Level 4</li>
+            <li>Level 5</li>
+          </ul>
 
-
-                    <li data-toggle="collapse" data-target="#service" class="collapsed">
-                      <a href="#"><i class="fa fa-globe fa-lg"></i> Services <span class="arrow"></span></a>
-                    </li>
-                    <ul class="sub-menu collapse" id="service">
-                      <li>New Service 1</li>
-                      <li>New Service 2</li>
-                      <li>New Service 3</li>
-                    </ul>
-
-
-                    <li data-toggle="collapse" data-target="#new" class="collapsed">
-                      <a href="#"><i class="fa fa-car fa-lg"></i> New <span class="arrow"></span></a>
-                    </li>
-                    <ul class="sub-menu collapse" id="new">
-                      <li>New New 1</li>
-                      <li>New New 2</li>
-                      <li>New New 3</li>
-                    </ul>
+          <li data-toggle="collapse" data-target="#new" class="collapsed">
+            <a href="#"><i class="fa fa-car fa-lg"></i> New <span class="arrow"></span></a>
+          </li>
+          <ul class="sub-menu collapse" id="new">
+            <li>New New 1</li>
+            <li>New New 2</li>
+            <li>New New 3</li>
+          </ul>
 
 
-                     <li>
-                      <a href="#">
-                      <i class="fa fa-user fa-lg"></i> Profile
-                      </a>
-                      </li>
+           <li>
+            <a href="#">
+            <i class="fa fa-user fa-lg"></i> Profile
+            </a>
+            </li>
 
-                     <li>
-                      <a href="#">
-                      <i class="fa fa-users fa-lg"></i> Users
-                      </a>
-                    </li>
-                </ul>
-         </div>
+           <li>
+            <a href="#">
+            <i class="fa fa-users fa-lg"></i> Users
+            </a>
+          </li>
+        </ul>
+       </div>
     </div>
 
-<div class='innerDash'>
-    <div class="panel panel-primary">
-  <div class="panel-heading">
-    <h3 class="panel-title">Panel primary</h3>
-  </div>
-  <div class="panel-body">
-    Panel content
-  </div>
-</div>
+  <div class='innerDash'>
+    <table class="table table-striped table-hover ">
+    <thead>
+      <tr>
+        <th></th>
+        <th>Corn</th>
+        <th>Wheat</th>
+        <th>Cherries</th>
+        <th>Soybeans</th>
+        <th>Coffee</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>NEWS</td>
+        <td><i class="fa fa-smile-o fa-2x"></i></td>
+        <td><i class="fa fa-frown-o fa-2x"></i></td>
+        <td><i class="fa fa-frown-o fa-2x"></i></td>
+      </tr>
+      <tr>
+        <td>WEATHER</td>
+        <td>SUNSHINE</td>
+        <td>STORMY</td>
+        <td>DRY</td>
+      </tr>
+      <tr >
+        <td>REPORTS</td>
+        <td>GOOD</td>
+        <td>GOOD</td>
+        <td>OK</td>
+      </tr>
+      <tr>
+        <td>VOLUME</td>
+        <td>+</td>
+        <td>-</td>
+        <td>+</td>
+      </tr>
+      <tr>
+        <td>IN SEASON</td>
+        <td>√</td>
+        <td>X</td>
+        <td>√</td>
+      </tr>
+      <tr class='success'>
+        <td>TOTAL POINTS</td>
+        <td>10</td>
+        <td>6</td>
+        <td>8</td>
+      </tr>
+    </tbody>
+  </table>
 
-<div class="panel panel-success">
-  <div class="panel-heading">
-    <h3 class="panel-title">Panel success</h3>
-  </div>
-  <div class="panel-body">
-    Panel content
-  </div>
-</div>
+    <div id="chartdiv"></div>
 
-<div class="panel panel-warning">
-  <div class="panel-heading">
-    <h3 class="panel-title">Panel warning</h3>
-  </div>
-  <div class="panel-body">
-    Panel content
-  </div>
-</div>
-
-<ul class="nav nav-tabs">
-  <li class="active"><a href="#home" data-toggle="tab" aria-expanded="true">Home</a></li>
-  <li class=""><a href="#profile" data-toggle="tab" aria-expanded="false">Profile</a></li>
-  <li class="dropdown">
-    <a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="false">
-      Dropdown <span class="caret"></span>
-    </a>
-    <ul class="dropdown-menu">
-      <li><a href="#dropdown1" data-toggle="tab">Action</a></li>
-      <li class="divider"></li>
-      <li><a href="#dropdown2" data-toggle="tab">Another action</a></li>
+    <ul class="nav nav-tabs">
+      <li class="active"><a href="#weather" data-toggle="tab" aria-expanded="true">Weather Outlook</a></li>
+      <li class=""><a href="#news" data-toggle="tab" aria-expanded="false">News</a></li>
+      <li class=""><a href="#profile" data-toggle="tab" aria-expanded="false">Profile</a></li>
+      <li class="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="false">
+          Dropdown <span class="caret"></span>
+        </a>
+        <ul class="dropdown-menu">
+          <li><a href="#dropdown1" data-toggle="tab">Action</a></li>
+          <li class="divider"></li>
+          <li><a href="#dropdown2" data-toggle="tab">Another action</a></li>
+        </ul>
+      </li>
     </ul>
-  </li>
-</ul>
-<div id="myTabContent" class="tab-content">
-  <div class="tab-pane fade active in" id="home">
-    <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
+
+    <div id="myTabContent" class="tab-content">
+      <div class="tab-pane fade active in" id="weather">
+        <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
+      </div>
+      <div class="tab-pane fade" id="news">
+        <p>Food truck fixie locavore, accusamus mcsweeney's marfa nulla single-origin coffee squid. Exercitation +1 labore velit, blog sartorial PBR leggings next level wes anderson artisan four loko farm-to-table craft beer twee. Qui photo booth letterpress, commodo enim craft beer mlkshk aliquip jean shorts ullamco ad vinyl cillum PBR. Homo nostrud organic, assumenda labore aesthetic magna delectus mollit.</p>
+      </div>
+      <div class="tab-pane fade" id="profile">
+        <p>Food truck fixie locavore, accusamus mcsweeney's marfa nulla single-origin coffee squid. Exercitation +1 labore velit, blog sartorial PBR leggings next level wes anderson artisan four loko farm-to-table craft beer twee. Qui photo booth letterpress, commodo enim craft beer mlkshk aliquip jean shorts ullamco ad vinyl cillum PBR. Homo nostrud organic, assumenda labore aesthetic magna delectus mollit.</p>
+      </div>
+    </div>
   </div>
-  <div class="tab-pane fade" id="profile">
-    <p>Food truck fixie locavore, accusamus mcsweeney's marfa nulla single-origin coffee squid. Exercitation +1 labore velit, blog sartorial PBR leggings next level wes anderson artisan four loko farm-to-table craft beer twee. Qui photo booth letterpress, commodo enim craft beer mlkshk aliquip jean shorts ullamco ad vinyl cillum PBR. Homo nostrud organic, assumenda labore aesthetic magna delectus mollit.</p>
-  </div>
-</div>
-<div id="chartdiv"></div>
 
 
-</div>
+
+
+
+
+
 
   </body>
 </html>
