getting partials bootstrapped

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app='grockr'>
   <head>
     <title></title>
     <link rel="stylesheet" href="/stylesheets/style.css">
@@ -20,7 +20,7 @@
   </head>
 
   <body>
-
+<!--
     <div class="nav-side-menu">
       <div class="brand">grockr</div>
       <i class="fa fa-bars fa-2x toggle-btn" data-toggle="collapse" data-target="#menu-content"></i>
@@ -165,8 +165,11 @@
   </div>
 
 
-
-
+ -->
+ <h1>Hi</h1>
+ <div class="container">
+   <div ui-view></div>
+ </div>
 
 
 
