--- a/public/index.html
+++ b/public/index.html
@@ -6,27 +6,29 @@
     <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel='stylesheet' href='http://bootswatch.com/cyborg/bootstrap.min.css'/>
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-
+    <script src="/bower_components/angular/angular.js"></script>
+    <script src="/bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="bower_components/angular-modal-service/dst/angular-modal-service.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
     <script src="http://www.amcharts.com/lib/3/amcharts.js"></script>
     <script src="http://www.amcharts.com/lib/3/serial.js"></script>
     <script src="http://www.amcharts.com/lib/3/themes/chalk.js"></script>
     <script src="http://www.amcharts.com/lib/3/themes/light.js"></script>
     <script src="http://www.amcharts.com/lib/3/amstock.js"></script>
+    <script src="./javascripts/app.js"></script>
+    <script src="./javascripts/controllers.js"></script>
+    <script src="./javascripts/chart.js"></script>
   </head>
 
   <body ng-app='grockr'>
-
-    <a ui-sref="home">Home</a>
-    <a ui-sref="dash">About</a>
-    <div ui-view></div>
-
-    <!-- <div class="nav-side-menu">
-      <div class="brand">grockr</div>
+    <div class="nav-side-menu">
+      <div class="brand"><a ui-sref='home'> grockr</a></div>
       <i class="fa fa-bars fa-2x toggle-btn" data-toggle="collapse" data-target="#menu-content"></i>
       <div class="menu-list">
         <ul id="menu-content" class="menu-content collapse out">
           <li>
-            <a href="#">
+            <a ui-sref="dash">
               <i class="fa fa-line-chart">  </i>Dashboard
             </a>
           </li>
@@ -79,98 +81,10 @@
         </ul>
        </div>
     </div>
+  </div>
+  <div ui-view></div>
 
-  <div class='innerDash'>
-    <table class="table table-striped table-hover ">
-    <thead>
-      <tr>
-        <th></th>
-        <th>Corn</th>
-        <th>Wheat</th>
-        <th>Cherries</th>
-        <th>Soybeans</th>
-        <th>Coffee</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>NEWS</td>
-        <td><i class="fa fa-smile-o fa-2x"></i></td>
-        <td><i class="fa fa-frown-o fa-2x"></i></td>
-        <td><i class="fa fa-frown-o fa-2x"></i></td>
-      </tr>
-      <tr>
-        <td>WEATHER</td>
-        <td>SUNSHINE</td>
-        <td>STORMY</td>
-        <td>DRY</td>
-      </tr>
-      <tr >
-        <td>REPORTS</td>
-        <td>GOOD</td>
-        <td>GOOD</td>
-        <td>OK</td>
-      </tr>
-      <tr>
-        <td>VOLUME</td>
-        <td>+</td>
-        <td>-</td>
-        <td>+</td>
-      </tr>
-      <tr>
-        <td>IN SEASON</td>
-        <td>√</td>
-        <td>X</td>
-        <td>√</td>
-      </tr>
-      <tr class='success'>
-        <td>TOTAL POINTS</td>
-        <td>10</td>
-        <td>6</td>
-        <td>8</td>
-      </tr>
-    </tbody>
-  </table>
 
-    <div id="chartdiv"></div>
-
-    <ul class="nav nav-tabs">
-      <li class="active"><a href="#weather" data-toggle="tab" aria-expanded="true">Weather Outlook</a></li>
-      <li class=""><a href="#news" data-toggle="tab" aria-expanded="false">News</a></li>
-      <li class=""><a href="#profile" data-toggle="tab" aria-expanded="false">Profile</a></li>
-      <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="false">
-          Dropdown <span class="caret"></span>
-        </a>
-        <ul class="dropdown-menu">
-          <li><a href="#dropdown1" data-toggle="tab">Action</a></li>
-          <li class="divider"></li>
-          <li><a href="#dropdown2" data-toggle="tab">Another action</a></li>
-        </ul>
-      </li>
-    </ul>
-
-    <div id="myTabContent" class="tab-content">
-      <div class="tab-pane fade active in" id="weather">
-        <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
-      </div>
-      <div class="tab-pane fade" id="news">
-        <p>Food truck fixie locavore, accusamus mcsweeney's marfa nulla single-origin coffee squid. Exercitation +1 labore velit, blog sartorial PBR leggings next level wes anderson artisan four loko farm-to-table craft beer twee. Qui photo booth letterpress, commodo enim craft beer mlkshk aliquip jean shorts ullamco ad vinyl cillum PBR. Homo nostrud organic, assumenda labore aesthetic magna delectus mollit.</p>
-      </div>
-      <div class="tab-pane fade" id="profile">
-        <p>Food truck fixie locavore, accusamus mcsweeney's marfa nulla single-origin coffee squid. Exercitation +1 labore velit, blog sartorial PBR leggings next level wes anderson artisan four loko farm-to-table craft beer twee. Qui photo booth letterpress, commodo enim craft beer mlkshk aliquip jean shorts ullamco ad vinyl cillum PBR. Homo nostrud organic, assumenda labore aesthetic magna delectus mollit.</p>
-      </div>
-    </div>
-  </div> -->
-  <script src="/bower_components/angular/angular.js"></script>
-  <script src="/bower_components/jquery/dist/jquery.min.js"></script>
-  <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-  <script src="bower_components/angular-modal-service/dst/angular-modal-service.min.js"></script>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
-  <script src="./javascripts/chart.js"></script>
-  <script src="./javascripts/app.js"></script>
-  <script src="./javascripts/controllers.js"></script>
 
   </body>
 </html>
