--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html ng-app='grockr'>
   <head>
     <title>grockr</title>
     <link rel="stylesheet" href="/stylesheets/style.css">
     <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
-    <link rel='stylesheet' href='http://bootswatch.com/cyborg/bootstrap.min.css'/>
+    <link rel='stylesheet' href='http://bootswatch.com/slate/bootstrap.min.css'/>
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <script src="/bower_components/angular/angular.js"></script>
     <script src="/bower_components/jquery/dist/jquery.min.js"></script>
@@ -21,9 +21,15 @@
     <script src="./javascripts/chart.js"></script>
   </head>
 
-  <body ng-app='grockr'>
+  <body>
     <div class="nav-side-menu">
       <div class="brand"><a ui-sref='home'> grockr</a></div>
+      <div class="brand">
+        <select ng-model='theme'>
+          <option value='cyborg'>cyborg</option>
+          <option value='slate'>slate</option>
+        </select>
+      </div>
       <i class="fa fa-bars fa-2x toggle-btn" data-toggle="collapse" data-target="#menu-content"></i>
       <div class="menu-list">
         <ul id="menu-content" class="menu-content collapse out">
