learning angular material

--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,17 @@
     <title>grockr</title>
     <link rel="stylesheet" href="/stylesheets/style.css">
     <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
-    <link rel='stylesheet' href='http://bootswatch.com/{{theme}}/bootstrap.min.css'/>
+    <!-- <link rel='stylesheet' href='http://bootswatch.com/{{theme}}/bootstrap.min.css'/> -->
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/bower_components/angular-material/angular-material.css">
     <script src="/bower_components/angular/angular.js"></script>
     <script src="/bower_components/jquery/dist/jquery.min.js"></script>
     <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="bower_components/angular-modal-service/dst/angular-modal-service.min.js"></script>
+    <script src="/bower_components/angular-modal-service/dst/angular-modal-service.min.js"></script>
+    <script src="/bower_components/angular-aria/angular-aria.js"></script>
+    <script src="/bower_components/angular-animate/angular-animate.js"></script>
+    <script src="/bower_components/angular-material/angular-material.js"></script>
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
     <script src="http://www.amcharts.com/lib/3/amcharts.js"></script>
     <script src="http://www.amcharts.com/lib/3/serial.js"></script>
@@ -18,6 +23,8 @@
     <script src="./javascripts/app.js"></script>
     <script src="./javascripts/controllers/controllers.js"></script>
     <script src="./javascripts/chart.js"></script>
+    <meta name="viewport" content="initial-scale=1" />
+
   </head>
 
   <body>
