views/buttons/demo chart

--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <html ng-app='grockr'>
   <head>
     <title>grockr</title>
-    <link rel="stylesheet" href="/stylesheets/style.css">
     <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/stylesheets/style.css">
     <!-- <link rel='stylesheet' href='http://bootswatch.com/{{theme}}/bootstrap.min.css'/> -->
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/bower_components/angular-material/angular-material.css">
+    <!-- <link rel="stylesheet" href="/bower_components/angular-material/angular-material.css"> -->
     <script src="/bower_components/angular/angular.js"></script>
     <script src="/bower_components/jquery/dist/jquery.min.js"></script>
     <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
@@ -16,21 +16,21 @@
     <script src="/bower_components/angular-material/angular-material.js"></script>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
-    <script src="http://www.amcharts.com/lib/3/amcharts.js"></script>
+    <!-- <script src="http://www.amcharts.com/lib/3/amcharts.js"></script>
     <script src="http://www.amcharts.com/lib/3/serial.js"></script>
     <script src="http://www.amcharts.com/lib/3/themes/light.js"></script>
-    <script src="http://www.amcharts.com/lib/3/amstock.js"></script>
+    <script src="http://www.amcharts.com/lib/3/amstock.js"></script>  -->
+    <!-- <script src="./javascripts/chart.js"></script> -->
     <script src="./javascripts/app.js"></script>
     <script src="./javascripts/controllers/controllers.js"></script>
-    <script src="./javascripts/chart.js"></script>
     <meta name="viewport" content="initial-scale=1" />
-
+    <script src="http://code.highcharts.com/stock/highstock.js"></script>
+    <script src="http://code.highcharts.com/stock/modules/exporting.js"></script>
+    <script src="./javascripts/highChart.js"></script>
   </head>
 
   <body>
   <div ui-view></div>
-
-
 
   </body>
 </html>
