--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html ng-app='grockr'>
-  <head>
+  <head ng-controller='dashThemeController'>
     <title>grockr</title>
     <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/stylesheets/style.css">
-    <!-- <link rel='stylesheet' href='http://bootswatch.com/{{theme}}/bootstrap.min.css'/> -->
+    <link rel='stylesheet' href='http://bootswatch.com/readable/bootstrap.min.css'/>
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- <link rel="stylesheet" href="/bower_components/angular-material/angular-material.css"> -->
     <script src="/bower_components/angular/angular.js"></script>
