--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html ng-app='grockr'>
-  <head ng-controller='dashThemeController'>
+  <head>
     <title>grockr</title>
     <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/stylesheets/style.css">
@@ -16,17 +16,13 @@
     <script src="/bower_components/angular-material/angular-material.js"></script>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
-    <!-- <script src="http://www.amcharts.com/lib/3/amcharts.js"></script>
-    <script src="http://www.amcharts.com/lib/3/serial.js"></script>
-    <script src="http://www.amcharts.com/lib/3/themes/light.js"></script>
-    <script src="http://www.amcharts.com/lib/3/amstock.js"></script>  -->
-    <!-- <script src="./javascripts/chart.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.1/angular-cookies.min.js"></script>
+
     <script src="./javascripts/app.js"></script>
     <script src="./javascripts/controllers/controllers.js"></script>
     <meta name="viewport" content="initial-scale=1" />
     <script src="http://code.highcharts.com/stock/highstock.js"></script>
     <script src="http://code.highcharts.com/stock/modules/exporting.js"></script>
-    <script src="./javascripts/highChart.js"></script>
   </head>
 
   <body>
