--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
 
     <script src="./javascripts/app.js"></script>
     <script src="./javascripts/controllers/controllers.js"></script>
+    <script src="./javascripts/services/app.js"></script>
     <meta name="viewport" content="initial-scale=1" />
     <script src="http://code.highcharts.com/stock/highstock.js"></script>
     <script src="http://code.highcharts.com/stock/modules/exporting.js"></script>
