--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
     <meta name="viewport" content="initial-scale=1" />
     <script src="http://code.highcharts.com/stock/highstock.js"></script>
     <script src="http://code.highcharts.com/stock/modules/exporting.js"></script>
+    <base href="/">
   </head>
 
   <body>
