--- a/public/index.html
+++ b/public/index.html
@@ -21,11 +21,12 @@
 
     <script src="./javascripts/app.js"></script>
     <script src="./javascripts/controllers/controllers.js"></script>
+    <script src="./javascripts/controllers/libraryController.js"></script>
     <script src="./javascripts/services/app.js"></script>
     <meta name="viewport" content="initial-scale=1" />
     <script src="http://code.highcharts.com/stock/highstock.js"></script>
     <script src="http://code.highcharts.com/stock/modules/exporting.js"></script>
-    <base href="/">
+    <!-- <base href="/"> -->
   </head>
 
   <body>
