--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="/stylesheets/style.css">
     <link rel='stylesheet' href='http://bootswatch.com/paper/bootstrap.min.css'/>
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.4.0/animate.min.css'>
+
     <!-- <link rel="stylesheet" href="/bower_components/angular-material/angular-material.css"> -->
     <script src="/bower_components/angular/angular.js"></script>
     <script src="/bower_components/jquery/dist/jquery.min.js"></script>
