--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <title>grockr</title>
     <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/stylesheets/style.css">
-    <link rel='stylesheet' href='http://bootswatch.com/paper/bootstrap.min.css'/>
+    <link rel='stylesheet' href='https://bootswatch.com/paper/bootstrap.min.css'/>
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.4.0/animate.min.css'>
 
@@ -26,9 +26,9 @@
     <script src="./javascripts/controllers/libraryController.js"></script>
     <script src="./javascripts/services/app.js"></script>
     <meta name="viewport" content="initial-scale=1" />
-    <script src="http://code.highcharts.com/stock/highstock.js"></script>
-    <script src="http://code.highcharts.com/stock/modules/exporting.js"></script>
-    <!-- <base href="/"> -->
+    <script src="https://code.highcharts.com/stock/highstock.js"></script>
+    <script src="https://code.highcharts.com/stock/modules/exporting.js"></script>
+    <base href="/">
   </head>
 
   <body>
